fixed footer link issue, adjusted angles so as to not create white space to left

--- a/resources/assets/styles/components/_card-grid.scss
+++ b/resources/assets/styles/components/_card-grid.scss
@@ -15,9 +15,10 @@
         background-color: #f0f0f0;
         content: "";
         height: 120px;
-        width: 50%;
+        width: 51%;
         position: absolute;
         top: -30%;
+        left: 0;
         transform: skewY(-5deg);
       }
     }
@@ -29,9 +30,10 @@
         background-color: #f0f0f0;
         content: "";
         height: 120px;
-        width: 50%;
+        width: 51%;
         position: absolute;
         top: -30%;
+        right: 0;
         transform: skewY(5deg);
       }
     }
