--- a/resources/assets/styles/components/_forms.scss
+++ b/resources/assets/styles/components/_forms.scss
@@ -37,6 +37,7 @@
         width: 51%;
         position: absolute;
         bottom: -7%;
+        left: 0;
         transform: skewY(-5deg);
       }
     }
@@ -52,6 +53,7 @@
         width: 51%;
         position: absolute;
         bottom: -7%;
+        right: 0;
         transform: skewY(5deg);
       }
     }
